tests/profile/error/module/wrongtype_loadedInstruction.profile
{
  "version": { "major": 12, "minor": 13 },
  "modules": [
    {
      "name": "jkl-module",
      "loadedInstruction": 1.0,
      "notLoadedInstruction": "not_instr"
    }
  ]
}
